# modular-graphical-toolkit

./: Cargo.toml  README.md  claude.MD
.claude/: settings.local.json
src/: main.rs
src/layout/: mod.rs
src/markup/: ast.rs  mod.rs  parser.rs  script.rs  style.rs
src/platform/: mod.rs  window.rs
src/renderer/: mod.rs
src/widget/: mod.rs
tests/: sample.mgt
