[package]
name = "mgt"
version = "0.1.0"
edition = "2024"

[dependencies]
# Wayland client
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-client = "0.31"

# Async event loop
calloop = "0.14"

# GPU rendering
wgpu = "24"

# Text rendering
cosmic-text = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
